--- a/_site.yml
+++ b/_site.yml
@@ -4,8 +4,10 @@ navbar:
   left:
     - text: "Home"
       href: index.html
-    - text: "Journal"
+    - text: "Lavaan"
       href: Journal.html
+    - text: "Mplus"
+      href: Mplus.html
     - text: "Links"
       href: Links.html
 output_dir: "docs"
