--- a/_site.yml
+++ b/_site.yml
@@ -5,7 +5,7 @@ navbar:
     - text: "Home"
       href: index.html
     - text: "Lavaan"
-      href: Journal.html
+      href: lavaan.html
     - text: "Mplus"
       href: Mplus.html
     - text: "Links"
